Fixed Background Issue
Pulled some CSS code from UIgradients to fix the background not showing up.

--- a/CSS/site.css
+++ b/CSS/site.css
@@ -3,10 +3,15 @@ main>.container {
 }
 
 .contactBG {
-   width:100%;
+   /* width:100%;
    background:url(/IMG/Witching\ Hour.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
-   background-attachment: fixed; 
+   background-attachment: fixed;  */
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
+
